# gatekeeper-metrics-reporter

./: .gitignore  .releaserc  CHANGELOG.md  Dockerfile  TODO  gatekeeper-metrics-reporter.py  pyproject.toml  requirements.txt
.github/workflows/: docker.yml  gh-workflow.yml  main.yml
src/gatekeeper-metrics-reporter/: api.py  config.py  gatekeeper_client.py  log_setup.py  main.backup.py  main.py  prometheus.py
src/gatekeeper_metrics_reporter/: api.py  config.py  gatekeeper_client.py  log_setup.py  main.py  prometheus.py
